Refactor(core): replace deprecated method for instantiation