@@ -1,12 +1,16 @@
 package com.coffeennec;
 
+import java.lang.reflect.InvocationTargetException;
+
 public final class Coffeennec {
 	public static void init(Class<?> mainClass, String...args) {
 		//TODO Use args in the future here
 		
 		try {
-			mainClass.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			mainClass.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException |
+				IllegalArgumentException | InvocationTargetException |
+				NoSuchMethodException | SecurityException e) {
 			e.printStackTrace();
 			System.exit(1);
 		}
